@@ -3,14 +3,14 @@ MD5 2783ba972bec821c6298021dbd1ca62d files/51boxquote-gentoo.el 111
 RMD160 34985824748ce2164e82a2d04e655354b5818460 files/51boxquote-gentoo.el 111
 SHA256 e02f9f0195c460dacfddb646b6b3035c3891023282031a812f30bf952fdab900 files/51boxquote-gentoo.el 111
 DIST boxquote-1.18.tar.gz 5171 RMD160 8770ff1f45517aba10e65628347bf7b68f986b12 SHA1 d6f0cef6385ca6a1b9ebf86c41a15f60444b2e7b SHA256 172feffd6eb459fd18cfb43d8c3945aea9ec2eaf8319368c7dd3648f7e2945d9
-EBUILD boxquote-1.18-r1.ebuild 637 RMD160 f67aed2869e1c4a6d657250898cc31e47731586e SHA1 8dd2ee4e0f222377dbdbf8af0d0fb1d3a9639b66 SHA256 23130c2e69e239b1d9828d1d560374e579c970577c4e5231084303f89b6098dc
-MD5 e8305b976f652f604684d524e8d2a62b boxquote-1.18-r1.ebuild 637
-RMD160 f67aed2869e1c4a6d657250898cc31e47731586e boxquote-1.18-r1.ebuild 637
-SHA256 23130c2e69e239b1d9828d1d560374e579c970577c4e5231084303f89b6098dc boxquote-1.18-r1.ebuild 637
-MISC ChangeLog 443 RMD160 c1483c397a7725e6d66d5f369117d350e88c370f SHA1 43e553e5636b7217621e7b0f85056352bd700e50 SHA256 b82a7f5eb653602967c98986ca4e0969d1cbd1534b2f23d5ba5c3c6eb9c1fea6
-MD5 f36fff5159a3ef7999f4d1049b168c61 ChangeLog 443
-RMD160 c1483c397a7725e6d66d5f369117d350e88c370f ChangeLog 443
-SHA256 b82a7f5eb653602967c98986ca4e0969d1cbd1534b2f23d5ba5c3c6eb9c1fea6 ChangeLog 443
+EBUILD boxquote-1.18-r1.ebuild 487 RMD160 a0958e6bb104f5d3d63cdd6147b34e5f319a7542 SHA1 b63111056cfc8739d9bdcc18083c16ea70711c71 SHA256 d7731624f1fbd33ff75f92111aadcf6779fa899ff606ef588f3350e92d275d39
+MD5 e6cba11ab82c645dd6fb246d5935b200 boxquote-1.18-r1.ebuild 487
+RMD160 a0958e6bb104f5d3d63cdd6147b34e5f319a7542 boxquote-1.18-r1.ebuild 487
+SHA256 d7731624f1fbd33ff75f92111aadcf6779fa899ff606ef588f3350e92d275d39 boxquote-1.18-r1.ebuild 487
+MISC ChangeLog 592 RMD160 78032bb31db7bcb10846afd47c065dbe04c145ab SHA1 8e131e43edc0d976d35a3b62b065b7222c12c6a8 SHA256 fb5246ef383104e0618e2025d4fe50ed7ae1922f87bd34cf488ff25c0a675326
+MD5 5e6bd993cce8befe8b0a4f38ff9aa29b ChangeLog 592
+RMD160 78032bb31db7bcb10846afd47c065dbe04c145ab ChangeLog 592
+SHA256 fb5246ef383104e0618e2025d4fe50ed7ae1922f87bd34cf488ff25c0a675326 ChangeLog 592
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 MD5 fcd33d07e4ee719b01157946734f4fe8 metadata.xml 158
 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 metadata.xml 158
