@@ -16,12 +16,6 @@ IUSE=""
 SITEFILE=51${PN}-gentoo.el
 
 src_compile() {
-	local al="${S}/${PN}-autoloads.el"
-	echo >${al}
-	emacs --batch -q --no-site-file \
-		--eval "(setq generated-autoload-file \"${al}\")" \
-		-f batch-update-autoloads "${S}" \
-		|| die "batch-update-autoloads failed"
-
+	elisp-make-autoload-file || die "elisp-make-autoload-file failed"
 	elisp-compile *.el || die "elisp-compile failed"
 }
